--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "egg": "^1.8.0",
     "egg-mysql": "^3.0.0",
-    "egg-scripts": "^1.2.0"
+    "egg-oauth2-server": "^2.0.3",
+    "egg-scripts": "^1.2.0",
+    "egg-validate": "^1.0.0"
   },
   "devDependencies": {
     "autod": "^2.9.0",
